# ska-sdp-idg-bench

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  lib-common.hpp  lib-cpu.hpp  lib-cuda.hpp  lib-hip.hpp
app/CPU/: CMakeLists.txt  cpu.cpp  cpu.hpp  util.hpp
app/CPU/kernels/: degridder_reference.cpp  gridder.cpp  gridder_reference.cpp  vadd.cpp
app/CUDA/: CMakeLists.txt  math.cuh  util.cpp  util.cu  util.cuh  util.hpp
app/CUDA/kernels/: degridder_reference.cu  degridder_v1.cu  degridder_v2.cu  degridder_v3.cu  degridder_v4.cu  degridder_v5.cu  degridder_v6.cu  gridder_reference.cu  gridder_v1.cu  gridder_v2.cu  gridder_v3.cu  gridder_v4.cu  gridder_v5.cu  gridder_v6.cu  gridder_v7.cu  gridder_v8.cu  vadd.cu
app/HIP/: CMakeLists.txt  math.hip.hpp  util.cpp  util.hip.cpp  util.hip.hpp  util.hpp
app/HIP/kernels/: degridder_reference.hip.cpp  degridder_v1.hip.cpp  degridder_v2.hip.cpp  degridder_v3.hip.cpp  degridder_v4.hip.cpp  degridder_v5.hip.cpp  degridder_v6.hip.cpp  degridder_v7.hip.cpp  gridder_reference.hip.cpp  gridder_v1.hip.cpp  gridder_v2.hip.cpp  gridder_v3.hip.cpp  gridder_v4.hip.cpp  gridder_v5.hip.cpp  gridder_v6.hip.cpp  gridder_v7.hip.cpp  gridder_v8.hip.cpp  gridder_v9.hip.cpp  util.hip.cpp  vadd.hip.cpp
app/common/: CMakeLists.txt  common.cpp  common.hpp  init.cpp  init.hpp  math.hpp  parameters.hpp  print.cpp  print.hpp  types.hpp
cmake/modules/: FindHIP.cmake
res/degridder/: Tesla_V100-PCIE-32GB-degridder_reference-cuda.csv  Tesla_V100-PCIE-32GB-degridder_reference-hip.csv
res/gridder/: Tesla_V100-PCIE-32GB-gridder_reference-cuda.csv  Tesla_V100-PCIE-32GB-gridder_reference-hip.csv
res/vadd/: Tesla_V100-PCIE-32GB-vadd-cuda.csv  Tesla_V100-PCIE-32GB-vadd-hip.csv
scripts/: clean.sh  install_amd.sh  install_nvidia.sh  make.sh  run.sh  run_perf_cuda.sh  run_perf_hip.sh
share/: setup-env.sh  setup-hip-nvidia.sh
tests/: CMakeLists.txt  c_degridder_reference.cpp  c_degridder_v1.cpp  c_degridder_v2.cpp  c_degridder_v3.cpp  c_degridder_v5.cpp  c_degridder_v6.cpp  c_gridder.cpp  c_gridder_reference.cpp  c_gridder_v1.cpp  c_gridder_v2.cpp  c_gridder_v3.cpp  c_gridder_v4.cpp  c_gridder_v5.cpp  c_gridder_v6.cpp  c_gridder_v7.cpp  c_gridder_v8.cpp  c_vadd.cpp  cuda_c_vadd.cpp  cuda_p_vadd.cpp  degridder_common.cpp  gridder_common.cpp  hip_c_vadd.cpp  hip_p_vadd.cpp  p_degridder_reference.cpp  p_degridder_v1.cpp  p_degridder_v2.cpp  p_degridder_v3.cpp  p_degridder_v4.cpp  p_degridder_v5.cpp  p_degridder_v6.cpp  p_gridder_reference.cpp  p_gridder_v1.cpp  p_gridder_v2.cpp  p_gridder_v3.cpp  p_gridder_v4.cpp  p_gridder_v5.cpp  p_gridder_v6.cpp  p_gridder_v7.cpp  p_gridder_v8.cpp  (+2 more)
